# MinVar

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
minvar/: utils.py
src/minvar/: __init__.py  cli.py  main.py  utils.py
