[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minvar"
version = "0.1.0"
description = "Minority Variant Detection Pipeline for Viral Genomics using IRMA outputs"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Germán Vallejo Palma" }
]

license = { text = "MIT" }

dependencies = [
    "pandas>=1.5",
    "pysam>=0.21"
]

keywords = [
    "genomics",
    "variant-calling",
    "viral-genomics",
    "minority-variants",
    "irma"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://github.com/GERMAN00VP/MinVar"
Repository = "https://github.com/GERMAN00VP/MinVar"

[project.scripts]
MinVar = "minvar.cli:main"
